Update main SCC fix spacings

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /* ------------- =General -------------- */
+
 html {
   box-sizing: border-box;
 }
@@ -9,25 +10,81 @@ html {
 
 body {
   font-family: "Crimson Text", serif;
+  font-size: 1rem;
   line-height: 1.3;
   padding-left: 1rem;
-  padding-right: 1rem
+  padding-right: 1rem;
+  padding-bottom: 1.2rem;
+  margin: 0;
+  width: 20rem;
 }
 
 /* ------------- =Masthead -------------- */
 
-h1 {
+article {
   color: #222;
-  font-family: "Crimson Text", serif;
-  font-style: regular;
-  font-size: 1.5rem;
+  border-bottom: 1px solid #999;
+  margin-top: 1.35rem;
 }
 
-header p {
-  color: #222;
-  font-family: "Crimson Text", serif;
+article header {
+  border-bottom: 1px solid #999;
+}
+
+article h1 {
+  font-weight: normal;
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  margin-top: -.05rem;
+}
+
+article header p {
   font-style: italic;
-  font-size: 1.125rem;
+  margin-top: .1rem;
+  margin-bottom: 1.3rem;
 }
 
 /* ------------- =Typography -------------- */
+
+article p {
+  color: #222;
+  line-height: 1.29rem;
+  margin-top: 1.15rem;
+  margin-bottom: 1.4rem;
+}
+
+/* ------------- =quote -------------- */
+
+blockquote {
+  color: #999;
+  font-size: 1.125rem;
+  margin: 1em 0;
+  margin-right: 2.5rem;
+  margin-left: 2.5rem;
+  text-indent: 0;
+  hanging-punctuation: first;
+}
+
+.quote {
+  font-weight: normal;
+}
+
+blockquote p {
+  text-align: left;
+  line-height: 1.45rem;
+  color: #555;
+  margin-top: -.2rem;
+  margin-bottom: 1.3rem;
+}
+
+/* ------------- =list -------------- */
+
+article ol {
+  color: #222;
+  margin-left: -1.5rem;
+  line-height: 1.3;
+  margin-top: -.4rem;
+  margin-bottom: 1.2rem;
+}
+
+/* ------------- =line markers -------------- */
